--- a/tests/Lykke.Job.CandlesProducer.Tests/Lykke.Job.CandlesProducer.Tests.csproj
+++ b/tests/Lykke.Job.CandlesProducer.Tests/Lykke.Job.CandlesProducer.Tests.csproj
@@ -12,6 +12,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\src\Lykke.Job.CandlesProducer.Services\Lykke.Job.CandlesProducer.Services.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Service Include="{82a7f48d-3b50-4b1e-b82e-3ada8210c358}" />
   </ItemGroup>
 
