--- a/src/Lykke.Job.CandlesProducer/Lykke.Job.CandlesProducer.csproj
+++ b/src/Lykke.Job.CandlesProducer/Lykke.Job.CandlesProducer.csproj
@@ -19,11 +19,12 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Lykke.Common" Version="1.1.95" />
-    <PackageReference Include="Lykke.Common.ApiLibrary" Version="1.0.12" />
-    <PackageReference Include="Lykke.Logs" Version="1.0.33" />
-    <PackageReference Include="Lykke.SettingsReader" Version="1.0.38" />
-    <PackageReference Include="Lykke.SlackNotification.AzureQueue" Version="1.0.4" />
+    <PackageReference Include="Lykke.Common" Version="1.1.97" />
+    <PackageReference Include="Lykke.Common.ApiLibrary" Version="1.0.13" />
+    <PackageReference Include="Lykke.Logs" Version="2.0.1" />
+    <PackageReference Include="Lykke.RabbitMq.Azure" Version="2.0.2" />
+    <PackageReference Include="Lykke.SettingsReader" Version="1.0.41" />
+    <PackageReference Include="Lykke.SlackNotification.AzureQueue" Version="1.0.5" />
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics" Version="2.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Server.Kestrel" Version="2.0.0" />
