- Rabbit settings simplified -

--- a/src/Lykke.Job.CandlesProducer/appsettings.json
+++ b/src/Lykke.Job.CandlesProducer/appsettings.json
@@ -9,15 +9,10 @@
     "AssetsCache": {
       "ExpirationPeriod": "00:00:00"
     },
-    "QuotesSubscribtion": {
-      "ConnectionString": "",
-      "ExchangeName": "",
-      "DeadLetterExchangeName": ""
-    },
-    "CandlesPublication": {
-      "ConnectionString": "",
-      "ExchangeName": ""
-    } 
+    "Rabbit": {
+      "QuotesSubscribtion": "",
+      "CandlesPublication": "" 
+    }
   },
   "Assets": {
     "ServiceUrl": "" 
