--- a/src/Lykke.Job.CandlesProducer/appsettings.json
+++ b/src/Lykke.Job.CandlesProducer/appsettings.json
@@ -13,7 +13,7 @@
       "QuotesSubscribtion": "",
       "CandlesPublication": {
         "ConnectionString": "",
-        "ExchangeNamespace": "" 
+        "Namespace": "" 
       }
     }
   },
