--- a/src/Lykke.Job.CandlesProducer/Lykke.Job.CandlesProducer.csproj
+++ b/src/Lykke.Job.CandlesProducer/Lykke.Job.CandlesProducer.csproj
@@ -21,7 +21,7 @@
   <ItemGroup>
     <PackageReference Include="Lykke.Common" Version="1.1.99" />
     <PackageReference Include="Lykke.Common.ApiLibrary" Version="1.0.13" />
-    <PackageReference Include="Lykke.Logs" Version="3.0.0" />
+    <PackageReference Include="Lykke.Logs" Version="3.1.0" />
     <PackageReference Include="Lykke.RabbitMq.Azure" Version="2.0.2" />
     <PackageReference Include="Lykke.SettingsReader" Version="1.0.41" />
     <PackageReference Include="Lykke.SlackNotification.AzureQueue" Version="1.0.5" />
@@ -42,4 +42,6 @@
     <ProjectReference Include="..\Lykke.Job.CandlesProducer.Core\Lykke.Job.CandlesProducer.Core.csproj" />
     <ProjectReference Include="..\Lykke.Job.CandlesProducer.Services\Lykke.Job.CandlesProducer.Services.csproj" />
   </ItemGroup>
+
+  <ProjectExtensions><VisualStudio><UserProperties appsettings_1json__JSONSchema="" /></VisualStudio></ProjectExtensions>
 </Project>
