--- a/src/Lykke.Job.CandlesProducer.AzureRepositories/Lykke.Job.CandlesProducer.AzureRepositories.csproj
+++ b/src/Lykke.Job.CandlesProducer.AzureRepositories/Lykke.Job.CandlesProducer.AzureRepositories.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <PackageReference Include="Lykke.AzureStorage" Version="2.0.1" />
+    <PackageReference Include="MessagePack" Version="1.6.2" />
   </ItemGroup>
 
   <ItemGroup>
