Trading volume calculation was implemented

--- a/src/Lykke.Job.CandlesProducer/appsettings.json
+++ b/src/Lykke.Job.CandlesProducer/appsettings.json
@@ -11,9 +11,10 @@
     },
     "Rabbit": {
       "QuotesSubscribtion": "",
+      "TradesSubscription": "",
       "CandlesPublication": {
         "ConnectionString": "",
-        "Namespace": "" 
+        "Namespace": ""
       }
     }
   },
