--- a/src/Lykke.Job.CandlesProducer.Core/Lykke.Job.CandlesProducer.Core.csproj
+++ b/src/Lykke.Job.CandlesProducer.Core/Lykke.Job.CandlesProducer.Core.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="JetBrains.Annotations" Version="11.1.0" />
     <PackageReference Include="Lykke.Common" Version="3.0.2" />
     <PackageReference Include="Lykke.Domain.Prices" Version="0.9.11" />
     <PackageReference Include="Lykke.Service.Assets.Client" Version="1.0.17" />
