--- a/src/Lykke.Job.CandlesProducer.Core/Lykke.Job.CandlesProducer.Core.csproj
+++ b/src/Lykke.Job.CandlesProducer.Core/Lykke.Job.CandlesProducer.Core.csproj
@@ -8,8 +8,12 @@
   <ItemGroup>
     <PackageReference Include="JetBrains.Annotations" Version="11.1.0" />
     <PackageReference Include="Lykke.Common" Version="3.0.2" />
-    <PackageReference Include="Lykke.Domain.Prices" Version="0.9.11" />
+    <PackageReference Include="Lykke.Job.QuotesProducer.Contract" Version="1.0.0" />
     <PackageReference Include="Lykke.Service.Assets.Client" Version="1.0.17" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\contract\Lykke.Job.CandlesProducer.Contract\Lykke.Job.CandlesProducer.Contract.csproj" />
   </ItemGroup>
 
 </Project>
