LWDEV-3989 min cache age was moved to the settings

--- a/src/Lykke.Job.CandlesProducer/appsettings.json
+++ b/src/Lykke.Job.CandlesProducer/appsettings.json
@@ -4,7 +4,7 @@
   "CandlesProducerJob": {
     "Db": {
       "LogsConnString": "",
-      "SnapshotsConnectionString": "" 
+      "SnapshotsConnectionString": ""
     },
     "AssetsCache": {
       "ExpirationPeriod": "00:00:00"
@@ -16,7 +16,10 @@
         "ConnectionString": "",
         "Namespace": ""
       }
-    }
+    },
+    "CandlesGenerator": {
+      "MinCacheAge":  "00:00:00" 
+    } 
   },
   "Assets": {
     "ServiceUrl": "" 
