LWDEV-3989 - Mid candles volume doubling was fixed - Direct asset volume is used for candles now - Spot trade exchange name was moved to the settings

--- a/src/Lykke.Job.CandlesProducer/appsettings.json
+++ b/src/Lykke.Job.CandlesProducer/appsettings.json
@@ -11,7 +11,10 @@
     },
     "Rabbit": {
       "QuotesSubscribtion": "",
-      "TradesSubscription": "",
+      "TradesSubscription": {
+        "ConnectionString": "",
+        "EndpointName": ""
+      },
       "CandlesPublication": {
         "ConnectionString": "",
         "Namespace": ""
