--- a/Lykke.Job.CandlesProducer.SqlRepositories/Lykke.Job.CandlesProducer.SqlRepositories.csproj
+++ b/Lykke.Job.CandlesProducer.SqlRepositories/Lykke.Job.CandlesProducer.SqlRepositories.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Dapper" Version="1.50.5" />
+    <PackageReference Include="Lykke.Logs.MsSql" Version="1.0.1" />
     <PackageReference Include="MessagePack" Version="1.7.3.4" />
   </ItemGroup>
 
