--- a/Lykke.Job.CandlesProducer.SqlRepositories/Lykke.Job.CandlesProducer.SqlRepositories.csproj
+++ b/Lykke.Job.CandlesProducer.SqlRepositories/Lykke.Job.CandlesProducer.SqlRepositories.csproj
@@ -1,14 +1,15 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.2</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Dapper" Version="1.50.5" />
+    <PackageReference Include="Dapper" Version="2.0.30" />
     <PackageReference Include="Lykke.Logs" Version="7.2.1" />
-    <PackageReference Include="Lykke.Logs.MsSql" Version="2.0.0" />
+    <PackageReference Include="Lykke.Logs.MsSql" Version="2.0.1" />
     <PackageReference Include="MessagePack" Version="1.7.3.4" />
+    <PackageReference Include="Microsoft.Data.SqlClient" Version="1.1.1" />
   </ItemGroup>
 
   <ItemGroup>
