--- a/contract/Lykke.Job.CandlesProducer.Contract/Lykke.Job.CandlesProducer.Contract.csproj
+++ b/contract/Lykke.Job.CandlesProducer.Contract/Lykke.Job.CandlesProducer.Contract.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
@@ -26,7 +26,7 @@
 
   <ItemGroup>
     <PackageReference Include="JetBrains.Annotations" Version="11.1.0" />
-    <PackageReference Include="Lykke.Common" Version="6.1.1" />
+    <PackageReference Include="Lykke.Common" Version="7.5.0" />
     <PackageReference Include="MessagePack" Version="1.7.3.4" />
   </ItemGroup>
 
